Fix title alignment on blog posts

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1,5 +1,4 @@
 #title {
-    text-align: center;
     margin-bottom: .7rem;
 }
 
